--- a/build.gradle
+++ b/build.gradle
@@ -1,43 +1,29 @@
 buildscript {
     repositories {
-        jcenter()
+        mavenCentral()
         maven {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
+        maven {
+            name = "sonatype"
+            url = "https://oss.sonatype.org/content/repositories/snapshots/"
+        }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
     }
 }
-apply plugin: 'net.minecraftforge.gradle.forge'
+
+apply plugin: 'forge'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
 
 repositories {
     maven {
         name = "Modmuss50"
         url = "http://maven.modmuss50.me/"
-    }
-}
-
-
-repositories {
-    maven {
-        name = "Modmuss50"
-        url = "http://maven.modmuss50.me/"
-    }
-	maven{
-        name "tterrag Repo"
-        url "http://maven.tterrag.com/"
-    }
-    maven {
-        name = "ic2"
-        url = "http://maven.ic2.player.to/"
     }
 }
 
@@ -46,28 +32,40 @@ configurations {
     compile.extendsFrom shade
 }
 
-version = "1.6.0"
-
 def ENV = System.getenv()
 if (ENV.BUILD_NUMBER) {
-    version = version + "." + "${System.getenv().BUILD_NUMBER}"
+    version = "1.1.0." + "${System.getenv().BUILD_NUMBER}"
+} else {
+    version = "1.1.0.BUILD"
 }
 
 minecraft {
-    version = "1.8.9-11.15.0.1694"
-    mappings = 'snapshot_20151230'
+    version = "1.7.10-10.13.4.1448-1.7.10"
     replace "@MODVERSION@", project.version
-	runDir = "run"
 }
 
 group = 'RebornCore'
 
+task deleteOldArtifacts(type: Delete) {
+    delete 'build/libs'
+}
+
+classes.dependsOn deleteOldArtifacts
+
+def grabDep(name, url) {
+    ant.get(src: url, dest: 'dep')
+    file("dep/" + url.substring(url.lastIndexOf("/"))).renameTo(file("dep/" + name + ".jar"))
+}
 
 dependencies {
-    //THIS IS NOT HOW YOU INCLUDE JSON DESTROYER! LOOK AT THE EXAMPLE!
-    shade 'JSON-Destroyer:JSON-Destroyer:0.4.+:dev'
-    shade 'net.industrial-craft:industrialcraft-2:2.3.249-ex18:api'
-    shade 'net.industrial-craft:industrialcraft-2:2.3.249-ex18:api'
+    def f = new File('dep/')
+    if (!f.exists()) {
+        f.mkdirs()
+    }
+    if (!f.exists()) {
+        f.mkdir()
+    }
+
 }
 
 processResources
@@ -82,33 +80,20 @@ processResources
             }
         }
 
+task sourceJar(type: Jar) {
+    from sourceSets.main.allSource
+    classifier = 'src'
+}
 
 task deobfJar(type: Jar) {
     from sourceSets.main.output
     exclude "**/*.psd"
     classifier = 'dev'
-	configurations.shade.each { dep ->
-        from(project.zipTree(dep)){
-            include 'me/modmuss50/jsonDestroyer/'
-            include 'ic2/api/'
-            exclude 'META-INF', 'META-INF/**', '**/*.java'
-        }
-    }
 }
 
 jar {
     exclude "**/*.psd"
     classifier = 'universal'
-        configurations.shade.each { dep ->
-        from(project.zipTree(dep)){
-            include 'me/modmuss50/jsonDestroyer/'
-            include 'ic2/api/'
-            exclude 'META-INF', 'META-INF/**', '**/*.java'
-        }
-    }
-	manifest{
-        attributes 'TweakClass': 'chylex.reborncore.javacheck.Java8Checker'
-    }
 }
 
 task apiJar(type: Jar) {
@@ -122,6 +107,7 @@ task apiJar(type: Jar) {
 apiJar.mustRunAfter deobfJar
 
 artifacts {
+    archives sourceJar
     archives deobfJar
     archives apiJar
 }
@@ -129,23 +115,7 @@ artifacts {
 uploadArchives {
     repositories {
         mavenDeployer {
-		//This is used when the build is done on a slave node
-		if (project.hasProperty('mavenPass'))
-        {
-			println 'Uploading to remote Maven Repo'
-            repository(url: "http://mavenupload.modmuss50.me/") {
-                authentication(userName: "buildslave", password: project.getProperty('mavenPass'))
-            }
-        }
-        else
-        { 
-			//this is when the build is executed on the master node
-			println 'Uploading to local Maven Repo'
-           repository(url: "file:///var/www/maven/")
-        }
-		
-		
-            
+            repository(url: "file:///var/www/maven/")
             pom {
                 groupId = "RebornCore"
                 version = project.version
