Fix buildscript, update Forge to 10.13.4.1614

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,11 @@
-/bin
-/out
-/run
-/.gradle
+.classpath
+.gradle
+.project
+.settings
+bin
+build
+eclipse
+out
 *.iml
-/.metadata
-/.settings
-./classpath
-/dep
-
-RebornCore.iws
-RebornCore.ipr
-Thumbs.db
-changelog.txt
-*.log
-.idea/*
+*.ipr
+*.iws
