--- a/build.gradle
+++ b/build.gradle
@@ -16,69 +16,29 @@ buildscript {
 }
 
 apply plugin: 'forge'
-apply plugin: 'maven'
-apply plugin: 'maven-publish'
 
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
-repositories {
-    maven {
-        name = "Modmuss50"
-        url = "http://maven.modmuss50.me/"
-    }
-}
-
-configurations {
-    shade
-    compile.extendsFrom shade
-}
-
-def ENV = System.getenv()
-if (ENV.BUILD_NUMBER) {
-    version = "1.1.0." + "${System.getenv().BUILD_NUMBER}"
-} else {
-    version = "1.1.0.BUILD"
-}
-
-minecraft {
-    version = "1.7.10-10.13.4.1448-1.7.10"
-    replace "@MODVERSION@", project.version
-}
-
+version = "1.1.0.19"
 group = 'RebornCore'
 
-task deleteOldArtifacts(type: Delete) {
-    delete 'build/libs'
+minecraft {
+    version = "1.7.10-10.13.4.1614-1.7.10"
+    replace "@MODVERSION@", project.version
+    runDir = "eclipse"
 }
 
-classes.dependsOn deleteOldArtifacts
-
-def grabDep(name, url) {
-    ant.get(src: url, dest: 'dep')
-    file("dep/" + url.substring(url.lastIndexOf("/"))).renameTo(file("dep/" + name + ".jar"))
-}
-
-dependencies {
-    def f = new File('dep/')
-    if (!f.exists()) {
-        f.mkdirs()
-    }
-    if (!f.exists()) {
-        f.mkdir()
+processResources {
+    from(sourceSets.main.resources.srcDirs) {
+        include 'mcmod.info'
+        expand 'version':project.version, 'mcversion':project.minecraft.version
     }
 
+    from(sourceSets.main.resources.srcDirs) {
+        exclude 'mcmod.info'
+    }
 }
-
-processResources
-        {
-            from(sourceSets.main.resources.srcDirs) {
-                include 'mcmod.info'
-                expand 'version':project.version, 'mcversion':project.minecraft.version
-            }
-
-            from(sourceSets.main.resources.srcDirs) {
-                exclude 'mcmod.info'
-            }
-        }
 
 task sourceJar(type: Jar) {
     from sourceSets.main.allSource
@@ -110,56 +70,4 @@ artifacts {
     archives sourceJar
     archives deobfJar
     archives apiJar
-}
-
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            repository(url: "file:///var/www/maven/")
-            pom {
-                groupId = "RebornCore"
-                version = project.version
-                artifactId = project.archivesBaseName
-                project {
-                    name project.archivesBaseName
-                    packaging 'jar'
-                    description 'RebornCore'
-                    url 'https://github.com/TechReborn/RebornCore'
-                    scm {
-                        url 'https://github.com/TechReborn/RebornCore'
-                        connection 'scm:git:git@github.com:TechReborn/RebornCore.git'
-                        developerConnection 'scm:git:git@github.com:TechReborn/RebornCore.git'
-                    }
-                    issueManagement {
-                        system 'github'
-                        url 'https://github.com/TechReborn/RebornCore/issues'
-                    }
-                    licenses {
-                        license {
-                            name 'License'
-                            url 'https://raw.githubusercontent.com/TechReborn/RebornCore/master/LICENSE.md'
-                            distribution 'repo'
-                        }
-                    }
-                    developers {
-                        developer {
-                            id 'modmuss50'
-                            name 'modmuss50'
-                            roles { role 'developer' }
-                        }
-                        developer {
-                            id 'Gigabit101'
-                            name 'Gigabit101'
-                            roles { role 'developer' }
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
-
-task wrapper(type: Wrapper) {
-    //To update the wrapper change the version bellow then run: gradle wrapper
-    gradleVersion = '2.8'
 }
